src/interpreter/tests/snapshots/propose__interpreter__tests__interpreter__interpreter@arc.prs.snap
---
source: src/interpreter/tests/interpreter.rs
expression: interpreter
input_file: test_input/arc.prs
---
InterpreterState(
  objects: {
    "A": Point(Point(
      x: -1.0,
      y: 1.0,
    )),
    "B": Point(Point(
      x: 0.0,
      y: 1.0,
    )),
    "C": Point(Point(
      x: 1.0,
      y: 1.0,
    )),
    "D": Point(Point(
      x: -1.0,
      y: 0.0,
    )),
    "E": Point(Point(
      x: 0.0,
      y: 0.0,
    )),
    "F": Point(Point(
      x: 1.0,
      y: 0.0,
    )),
    "G": Point(Point(
      x: -1.0,
      y: -1.0,
    )),
    "H": Point(Point(
      x: 0.0,
      y: -1.0,
    )),
    "I": Point(Point(
      x: 1.0,
      y: -1.0,
    )),
  },
  config: {
    "angle": Number(0.0),
    "anglecolor": String("#000000"),
    "anglesize": Number(20.0),
    "anglewidth": Number(1.5),
    "color": String("green"),
    "decorcolor": String("#000000"),
    "decorfill": String("none"),
    "decorsize": Number(5.0),
    "decorwidth": Number(1.5),
    "dist": Number(10.0),
    "dotfill": String("#000000"),
    "dotsize": Number(2.5),
    "dotstroke": String("#000000"),
    "dotwidth": Number(0.0),
    "fill": String("none"),
    "font": String("serif"),
    "height": Number(10.0),
    "labelsize": Number(15.0),
    "linewidth": Number(1.5),
    "loc": Number(0.5),
    "width": Number(10.0),
  },
)
