src/interpreter/tests/snapshots/propose__interpreter__tests__interpreter__interpreter@draw_angle.prs.snap
---
source: src/interpreter/tests/interpreter.rs
expression: interpreter
input_file: test_input/draw_angle.prs
---
InterpreterState(
  objects: {
    "A": Point(Point(
      x: 2.0,
      y: 3.0,
    )),
    "B": Point(Point(
      x: 4.0,
      y: 0.0,
    )),
    "O": Point(Point(
      x: 0.0,
      y: 0.0,
    )),
  },
  config: {
    "angle": Number(0.0),
    "anglecolor": String("#000000"),
    "anglesize": Number(20.0),
    "anglewidth": Number(1.5),
    "color": String("#000000"),
    "decorcolor": String("#000000"),
    "decorfill": String("#00000000"),
    "decorsize": Number(8.0),
    "decorwidth": Number(1.5),
    "dist": Number(10.0),
    "dotfill": String("#000000"),
    "dotsize": Number(2.5),
    "dotstroke": String("#000000"),
    "dotwidth": Number(0.0),
    "fill": String("#00000000"),
    "font": String("serif"),
    "height": Number(10.0),
    "labelsize": Number(15.0),
    "linewidth": Number(1.5),
    "loc": Number(0.5),
    "width": Number(10.0),
  },
)
