src/interpreter/tests/snapshots/propose__interpreter__tests__interpreter__interpreter@pascal.prs.snap
---
source: src/interpreter/tests/interpreter.rs
expression: interpreter
input_file: test_input/pascal.prs
---
InterpreterState(
  objects: {
    "A": Point(Point(
      x: 3.064177772475912,
      y: 2.571150438746157,
    )),
    "B": Point(Point(
      x: 1.3680805733026753,
      y: 3.7587704831436333,
    )),
    "C": Point(Point(
      x: -1.9999999999999991,
      y: 3.464101615137755,
    )),
    "D": Point(Point(
      x: -3.9843513405647397,
      y: -0.35347474441600574,
    )),
    "E": Point(Point(
      x: -0.6945927106677212,
      y: -3.939231012048832,
    )),
    "F": Point(Point(
      x: 3.7587704831436337,
      y: -1.3680805733026749,
    )),
    "O": Point(Point(
      x: 0.0,
      y: 0.0,
    )),
    "P": Point(Point(
      x: 2.4322583457785876,
      y: 1.476633885416594,
    )),
    "Q": Point(Point(
      x: 0.3876808093092612,
      y: 1.4605995286772844,
    )),
    "R": Point(Point(
      x: -1.6439191821930481,
      y: 1.4446669467945856,
    )),
    "c": Circle(Circle(
      O: Point(
        x: 0.0,
        y: 0.0,
      ),
      r: 4.0,
    )),
    "r": Number(4.0),
  },
  config: {
    "angle": Number(0.0),
    "anglecolor": String("#000000"),
    "anglesize": Number(20.0),
    "anglewidth": Number(1.5),
    "color": String("#000000"),
    "decorcolor": String("#000000"),
    "decorfill": String("none"),
    "decorsize": Number(5.0),
    "decorwidth": Number(1.5),
    "dist": Number(10.0),
    "dotfill": String("#000000"),
    "dotsize": Number(2.5),
    "dotstroke": String("#000000"),
    "dotwidth": Number(0.0),
    "fill": String("none"),
    "font": String("serif"),
    "height": Number(10.0),
    "labelsize": Number(15.0),
    "linewidth": Number(1.5),
    "loc": Number(0.5),
    "width": Number(10.0),
  },
)
