src/interpreter/tests/snapshots/propose__interpreter__tests__interpreter__interpreter@problem1.prs.snap
---
source: src/interpreter/tests/interpreter.rs
expression: interpreter
input_file: test_input/problem1.prs
---
InterpreterState(
  objects: {
    "A": Point(Point(
      x: -0.6945927106677212,
      y: 3.939231012048832,
    )),
    "B": Point(Point(
      x: -3.7587704831436337,
      y: -1.3680805733026746,
    )),
    "C": Point(Point(
      x: 3.7587704831436337,
      y: -1.3680805733026749,
    )),
    "D": Point(Point(
      x: 0.6945927106677213,
      y: -3.939231012048832,
    )),
    "E": Point(Point(
      x: -2.8395171514008597,
      y: 0.22411290230277758,
    )),
    "F": Point(Point(
      x: 0.6588660887551063,
      y: 2.3262416254084317,
    )),
    "G": Point(Point(
      x: -1.2103273710406313,
      y: 1.2030698654434837,
    )),
    "K": Point(Point(
      x: -0.2578673301864547,
      y: -1.3680805733026746,
    )),
    "O": Point(Point(
      x: 0.0,
      y: 0.0,
    )),
    "c": Circle(Circle(
      O: Point(
        x: 0.0,
        y: 0.0,
      ),
      r: 4.0,
    )),
    "l": Line(Line(
      a: -1.762350525465985,
      b: -0.6528472345255996,
      c: -1.3476002437434573,
    )),
    "r": Number(4.0),
    "x": Number(-0.6981317007977315),
  },
  config: {
    "angle": Number(0.0),
    "anglecolor": String("#000000"),
    "anglesize": Number(20.0),
    "anglewidth": Number(1.5),
    "color": String("#000000"),
    "decorcolor": String("blue"),
    "decorfill": String("none"),
    "decorsize": Number(5.0),
    "decorwidth": Number(1.5),
    "dist": Number(10.0),
    "dotfill": String("#000000"),
    "dotsize": Number(2.5),
    "dotstroke": String("#000000"),
    "dotwidth": Number(0.0),
    "fill": String("none"),
    "font": String("serif"),
    "height": Number(10.0),
    "labelsize": Number(15.0),
    "linewidth": Number(1.5),
    "loc": Number(0.5),
    "width": Number(10.0),
  },
)
